--- a/express/package.json
+++ b/express/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "nvm": "^0.0.4",
     "pg": "^8.11.3"
   },
   "scripts": {
