--- a/express/package.json
+++ b/express/package.json
@@ -15,6 +15,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js -p 3004"
   }
 }
